[tool.poetry]
name = "nidhogg"
version = "0.1.0"
description = ""
authors = ["StarrFox <starrfox6312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.70.0"}
sqlmodel = "^0.0.4"
fastapi-jwt-auth = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
